--- a/src/index.css
+++ b/src/index.css
@@ -856,7 +856,7 @@ text-align: center;
 
 
 #ice {
-  background: url("src/img/steps2.png");
+  background: url("../public/img/steps2.png");
   background-size: cover; /* Фон растягивается, чтобы покрыть весь элемент */
   background-position: center; /* Центрирование фона */
   background-repeat: no-repeat; /* Фон не повторяется */
@@ -940,7 +940,7 @@ height: 1543.03px;
 left: 252.5px;
 top: -692.96px;
 
-background: url("src/img/Gradient.png");
+background: url("public/img/Gradient.png");
 transform: rotate(24.2deg);
 
 
@@ -1166,7 +1166,7 @@ width: 1543.03px;
 height: 1543.03px;
 /* left: 252.5px;
 top: -692.96px; */
-background-image: url("src/img/Gradient.png");
+background-image: url("img/Gradient.png");
 /* Gradient */
 
 
@@ -1224,7 +1224,7 @@ position: absolute;
 width: 1543.03px;
 height: 1543.03px;
 
-background: url("src/img/Gradient.png");
+background: url("img/Gradient.png");
 transform: rotate(-24.2deg);
 
 
@@ -1236,7 +1236,7 @@ transform: rotate(-24.2deg);
 /* PLEASE */
 #steps{
 
-background: url("src/img/steps2.png");
+background: url("img/steps2.png");
 position: relative;
 /* width: 1240px;
 height: 560px; */
@@ -1367,7 +1367,7 @@ color: #B2B2B2;
 }
 
 #privacy{
-  background: url("src/img/private.png");
+  background: url("img/private.png");
   background-size: cover; /* Фон растягивается, чтобы покрыть весь элемент */
   background-position: center; /* Центрирование фона */
   background-repeat: no-repeat; /* Фон не повторяется */
@@ -1691,7 +1691,7 @@ color: #D5D5D5;
   }
 
   #steps {
-    background: url("src/img/steps2.png");
+    background: url("img/steps2.png");
     position: relative;
     background-color: #000000;
     border-radius: 40px;
