--- a/src/index.css
+++ b/src/index.css
@@ -856,7 +856,7 @@ text-align: center;
 
 
 #ice {
-  background: url("/img/steps2.png");
+  background: url("img/steps2.png");
   background-size: cover; /* Фон растягивается, чтобы покрыть весь элемент */
   background-position: center; /* Центрирование фона */
   background-repeat: no-repeat; /* Фон не повторяется */
@@ -1236,7 +1236,7 @@ transform: rotate(-24.2deg);
 /* PLEASE */
 #steps{
 
-background: url("/img/steps2.png");
+background: url("img/steps2.png");
 position: relative;
 /* width: 1240px;
 height: 560px; */
