--- a/src/index.css
+++ b/src/index.css
@@ -858,7 +858,7 @@ text-align: center;
 
 
 #ice {
-  background: url("img/steps2.png");
+
   background-size: cover; /* Фон растягивается, чтобы покрыть весь элемент */
   background-position: center; /* Центрирование фона */
   background-repeat: no-repeat; /* Фон не повторяется */
@@ -1369,7 +1369,7 @@ color: #B2B2B2;
 }
 
 #privacy{
-  background: url("/img/private.png");
+  background: url("img/private.png");
   background-size: cover; /* Фон растягивается, чтобы покрыть весь элемент */
   background-position: center; /* Центрирование фона */
   background-repeat: no-repeat; /* Фон не повторяется */
@@ -1692,7 +1692,6 @@ color: #D5D5D5;
   }
 
   #steps {
-    background: url("img/steps2.png");
     position: relative;
     background-color: #000000;
     border-radius: 40px;
