--- a/src/index.css
+++ b/src/index.css
@@ -604,12 +604,13 @@ margin-left: 35px;
 .card4-text{
   font-family: Raleway;
   font-size: clamp(23px, 3vw, 40px);
-font-weight: 500;
-line-height: 1.1;
-text-align: left;
-/* background-color: red; */
-margin-left: 35px;
-width: 80%;
+  font-weight: 500;
+  line-height: 1.1;
+  text-align: left;
+  margin-left: 35px;
+  width: 80%;
+  z-index: 10;
+  position: relative;
 
 }
 
@@ -1737,6 +1738,21 @@ color: #D5D5D5;
   
   
   
+}
+
+.card-btn{
+  position: absolute;
+    bottom: 5%;
+    right: 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px 8px;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 4px;
+    color: white;
+    font-size: clamp(14px, 2vw, 18px);
+    line-height: 1.2;
 }
 
 
