--- a/src/index.css
+++ b/src/index.css
@@ -106,9 +106,13 @@ html {
 
 .title{
   width: 70%;
-  font-size: 70px;
+  font-size: clamp(50px, 7vw, 70px);
   font-weight: 500;
   text-align: left;
+}
+
+.title-mob{
+  display: none;
 }
 
 .green-back{
@@ -139,6 +143,7 @@ html {
 
 .background-video {
   position: absolute;
+  opacity: 0.7;
   top: 0;
   left: 0;
   width: 100%;
@@ -181,7 +186,7 @@ html {
   display: flex;
   flex-direction: column;
   text-align: end;
-  width: 30%;
+  width: 40%;
 }
 
 .mTop{
@@ -214,7 +219,7 @@ html {
   max-width: 1400px;
   padding: auto;
   width: 100%;
-  margin: 5% auto 60px auto;
+  margin: 5% auto 2% auto;
 }
 
 .choose-green{
@@ -249,16 +254,6 @@ html {
   width: 100%;
 }
 
-#numbers .circle{
-  color: #FFFFFF;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  font-family: Raleway;
-  position: relative;
-}
-
 #numbers .icon {
   width: 3.4vw;
 }
@@ -273,7 +268,16 @@ html {
   height: auto;
 }
 
+.card-circle{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  justify-items: center;
+}
+
 .card-pale-text{
+  font-size: clamp(14px, 2vw, 18px);
   opacity: 20%;
   width: 300px;
   text-align: center;
@@ -302,6 +306,16 @@ html {
   cursor: pointer;
   border-radius: 20px;
   margin-bottom: 2%;
+}
+
+.bubble-text{
+  z-index: 30;
+  font-size: clamp(5px, 4vw, 25px);
+  font-family: 'Raleway';
+  font-weight: 500;
+  text-align: start;
+  padding: 12%;
+
 }
 
 .card2{
@@ -369,7 +383,7 @@ html {
 
 .card4-text{
   font-family: Raleway;
-  font-size: clamp(23px, 3vw, 40px);
+  font-size: clamp(20px, 3vw, 35px);
   font-weight: 500;
   line-height: 1.1;
   text-align: left;
@@ -384,7 +398,7 @@ html {
   position: absolute;
   width: 100%;
   z-index: 20;
-  bottom: 10px;
+  bottom: 3%;
   text-align: center;
   font-family: Raleway;
   font-size: "clamp(40px, 4vw, 70px)";
@@ -1103,6 +1117,14 @@ background-color: #111;
     width: 100%; 
   }
 
+  .title-desktop{
+    display: none;
+  }
+
+  .title-mob {
+    display:flex;
+  }
+
   .description {
     font-size: 22px; 
   }
@@ -1144,7 +1166,7 @@ background-color: #111;
   }
 
   .card-pale-text{
-    margin-top: 0;
+    margin-top: 5%;
     margin-bottom: 5%;
   }
 
@@ -1218,14 +1240,15 @@ background-color: #111;
     display: none;
   }
 
-  #hero .green-back{
+  /* #hero .green-back{
     background-color: transparent;
-  }
+  } */
 
-  #hero .green-mob{
+  /* #hero .green-mob{
     background-color: #17FFB2;
     border-radius: 10px;
-  }
+    display: none;
+  } */
 
   .arrow-icon {
     width: 8vw;
@@ -1404,12 +1427,22 @@ background-color: #111;
     display: none;
   }
 
-  #numbers .circle {
-    width: 90% !important;
+  .circle {
+    background-color: #111111;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    width: 98vw;
+    aspect-ratio: 1;
+    margin-bottom: 15px;
   }
 
   #numbers .num{
     width: 100%;
+    background-color: red;
   }
 
   #numbers .text{
