--- a/src/index.css
+++ b/src/index.css
@@ -239,11 +239,11 @@ html {
 #numbers .line,
 #numbers .num,
 #numbers .icon {
-  background-size: contain;
+  /* background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   height: auto;
-  flex-shrink: 0; 
+  flex-shrink: 0;  */
 }
 
 #numbers .line {
@@ -252,20 +252,23 @@ html {
 
 #numbers .num {
   width: 100%;
+  height: 100%;
 }
 
 #numbers .icon {
   width: 3.4vw;
 }
 
-#numbers .text {
-  position: absolute;
-  top: 100%;
-  font-size: 1.2rem;
+.text {
+  color: #fff;
+  position: relative;
+  font-size: clamp(14px, 4vw, 20px);
+  margin-bottom: 20px;
   font-weight: 500;
   text-align: center;
-  width: 90%;
-  height: auto;
+ 
+  height: 30px;
+  align-self: center;
 }
 
 .card-circle{
@@ -1429,20 +1432,24 @@ background-color: #111;
 
   .circle {
     background-color: #111111;
+    position: relative;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: white;
-    width: 98vw;
+    width: 90vw;
+    height: 90vw;;
+    border-radius: 20px;
     aspect-ratio: 1;
     margin-bottom: 15px;
   }
 
+
+  
   #numbers .num{
     width: 100%;
-    background-color: red;
   }
 
   #numbers .text{
