--- a/src/index.css
+++ b/src/index.css
@@ -280,9 +280,10 @@ html {
 }
 
 .card-pale-text{
-  font-size: clamp(14px, 2vw, 18px);
+  /* font-size: clamp(14px, 2vw, 18px); */
+  font-size: clamp(6px, 2vw, 18px);
   opacity: 20%;
-  width: 300px;
+  width: 100%;
   text-align: center;
   margin-top: 15%;
   margin-bottom: 5%;
@@ -293,7 +294,7 @@ html {
   flex-wrap: wrap;
   width: 100%;
   align-items: start;
-  gap: 20px;
+  gap: 10px;
   justify-content: space-between;
 }
 
@@ -313,7 +314,8 @@ html {
 
 .bubble-text{
   z-index: 30;
-  font-size: clamp(5px, 4vw, 25px);
+  /* font-size: clamp(5px, 4vw, 25px); */
+  font-size: clamp(5px, 2vw, 25px);
   font-family: 'Raleway';
   font-weight: 500;
   text-align: start;
@@ -361,7 +363,8 @@ html {
 }
 
 .card3-text{
-  font-size: clamp(23px, 3vw, 40px);
+  /* font-size: clamp(23px, 3vw, 40px); */
+  font-size: clamp(13px, 3vw, 40px);
   line-height: 1.1;
   text-align: left;
   width: 70%;
@@ -385,8 +388,9 @@ html {
 }
 
 .card4-text{
-  font-family: Raleway;
-  font-size: clamp(20px, 3vw, 35px);
+  font-family: 'Raleway';
+  /* font-size: clamp(20px, 3vw, 35px); */
+  font-size: clamp(10px, 3vw, 35px);
   font-weight: 500;
   line-height: 1.1;
   text-align: left;
@@ -403,8 +407,9 @@ html {
   z-index: 20;
   bottom: 3%;
   text-align: center;
-  font-family: Raleway;
-  font-size: "clamp(40px, 4vw, 70px)";
+  font-family: 'Raleway';
+  /* font-size: "clamp(40px, 4vw, 70px)"; */
+  font-size: "clamp(20px, 4vw, 70px)";
   line-height: 70px;
   font-weight: 500;
 }
@@ -560,10 +565,10 @@ html {
 }
 
 .cards1{
-  width: 100%;
+  /* width: 100%;
   display: flex;
   height: 122px;
-  justify-content: space-between;
+  justify-content: space-between; */
 }
 
 .ice-card {
@@ -1073,6 +1078,7 @@ background-color: #111;
   .hero-content {
     flex-direction: column; 
     border-radius: 20px;
+    height: auto;
   }
 
   .footer-right{
@@ -1169,7 +1175,8 @@ background-color: #111;
 
   .card-pale-text{
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 20px;
+    text-align: center;
   }
 
   .card-mob{
@@ -1261,8 +1268,8 @@ background-color: #111;
   }
 
   .card1, .card2, .card3, .card4 {
-    width: 90vw; 
-    max-width: none;
+    /* width: 90vw; 
+    max-width: none; */
   }
 
   .ice-title{
@@ -1439,8 +1446,9 @@ background-color: #111;
     align-items: center;
     justify-content: center;
     color: white;
-    width: 90vw;
-    height: 90vw;;
+    /* width: 90vw; */
+    width: 48%;
+  
     border-radius: 20px;
     aspect-ratio: 1;
     margin-bottom: 15px;
@@ -1459,6 +1467,10 @@ background-color: #111;
 
   #numbers{
     padding-bottom: 100px;
+  }
+
+  .card4-footer{
+    bottom: -40% !important;
   }
 }
 
