--- a/src/index.css
+++ b/src/index.css
@@ -9,22 +9,21 @@ body {
   background-color: #1C1C1C;
 }
 
-header {
+.header {
   width: 100%;
   z-index: 10;
   display: flex;
   justify-content: space-between;
   align-items: center;
   max-width: 1400px; 
-  margin: 0 auto; 
   position: relative;
 }
 
-header .for-mb{
+.for-mb{
   display: none;
 }
 
-header nav ul {
+.header nav ul {
   display: flex;
   justify-content: center;
   list-style-type: none;
@@ -32,7 +31,7 @@ header nav ul {
   padding: 30px;
 }
 
-header nav ul li {
+.header nav ul li {
   margin: 0 20px;
 }
 
@@ -143,7 +142,7 @@ html {
 
 .background-video {
   position: absolute;
-  opacity: 0.7;
+  opacity: 0.6;
   top: 0;
   left: 0;
   width: 100%;
@@ -248,6 +247,8 @@ html {
 
 #numbers .line {
   width: 25vw;
+  /* margin-top: 10px; */
+  margin-bottom: 20px;
 }
 
 #numbers .num {
@@ -261,7 +262,6 @@ html {
 
 .text {
   color: #fff;
-  position: relative;
   font-size: clamp(14px, 4vw, 20px);
   margin-bottom: 20px;
   font-weight: 500;
@@ -280,8 +280,8 @@ html {
 }
 
 .card-pale-text{
-  /* font-size: clamp(14px, 2vw, 18px); */
-  font-size: clamp(6px, 2vw, 18px);
+  font-size: clamp(14px, 2vw, 18px);
+  /* font-size: clamp(6px, 2vw, 18px); */
   opacity: 20%;
   width: 100%;
   text-align: center;
@@ -314,8 +314,8 @@ html {
 
 .bubble-text{
   z-index: 30;
-  /* font-size: clamp(5px, 4vw, 25px); */
-  font-size: clamp(5px, 2vw, 25px);
+  font-size: clamp(5px, 4vw, 25px);
+  /* font-size: clamp(5px, 2vw, 25px); */
   font-family: 'Raleway';
   font-weight: 500;
   text-align: start;
@@ -363,8 +363,8 @@ html {
 }
 
 .card3-text{
-  /* font-size: clamp(23px, 3vw, 40px); */
-  font-size: clamp(13px, 3vw, 40px);
+  font-size: clamp(23px, 3vw, 40px);
+  /* font-size: clamp(13px, 3vw, 40px); */
   line-height: 1.1;
   text-align: left;
   width: 70%;
@@ -389,8 +389,8 @@ html {
 
 .card4-text{
   font-family: 'Raleway';
-  /* font-size: clamp(20px, 3vw, 35px); */
-  font-size: clamp(10px, 3vw, 35px);
+  font-size: clamp(20px, 3vw, 35px);
+  /* font-size: clamp(10px, 3vw, 35px); */
   font-weight: 500;
   line-height: 1.1;
   text-align: left;
@@ -409,7 +409,7 @@ html {
   text-align: center;
   font-family: 'Raleway';
   /* font-size: "clamp(40px, 4vw, 70px)"; */
-  font-size: "clamp(20px, 4vw, 70px)";
+  font-size: clamp(40px, 4vw, 70px);
   line-height: 70px;
   font-weight: 500;
 }
@@ -417,6 +417,14 @@ html {
 /* CURTAIN */
 #curtain{
   padding: 3vw 0;
+}
+
+.curtain-text{
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 .container {
   display: flex;
@@ -454,7 +462,7 @@ html {
   width: 100vw;
   background-color: #17FFB2; 
   height: 110%;
-  text-align: center;
+  /* text-align: center; */
   color: black;
   z-index: 5;
   display: flex;
@@ -467,10 +475,8 @@ html {
   font-size: clamp(34px, 5vw, 60px);
   font-weight: 500;
   line-height: 1.2;
-  text-align: left;
   margin-right: 20px;
   color: #000;
-  width: 100%;
 }
 
 .arrow-icon {
@@ -479,7 +485,10 @@ html {
   max-width: 49px; 
   fill: #1c1c1c; 
   align-self: center;
+  z-index: 100;
+  /* background-color: red; */
 }
+
 
 /* ice */
 #ice {
@@ -565,10 +574,10 @@ html {
 }
 
 .cards1{
-  /* width: 100%;
+  width: 100%;
   display: flex;
   height: 122px;
-  justify-content: space-between; */
+  justify-content: space-between;
 }
 
 .ice-card {
@@ -1050,7 +1059,7 @@ background-color: #111;
     right: 10px;
   } 
 
-  section, header {
+  section {
     padding: 20px; 
     box-sizing: border-box; 
   }
@@ -1184,10 +1193,12 @@ background-color: #111;
   }
 
   header {
-    width: 100%;
-    padding: 10px 0;
+    /* width: 100%;
+    padding: 10px 0; */
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    height: fit-content;
   }
 
   nav {
@@ -1241,11 +1252,11 @@ background-color: #111;
     height: auto;
   }
 
-  header .for-mb{
+   .for-mb{
     display: block;
   }
 
-  header .for-lg{
+   .for-lg{
     display: none;
   }
 
@@ -1267,8 +1278,8 @@ background-color: #111;
   }
 
   .card1, .card2, .card3, .card4 {
-    /* width: 90vw; 
-    max-width: none; */
+    width: 90vw; 
+    max-width: none;
   }
 
   .ice-title{
@@ -1470,6 +1481,11 @@ background-color: #111;
 
   .card4-footer{
     bottom: -40% !important;
+  }
+
+  .cards{
+    align-items: center;
+    justify-content: center;
   }
 }
 
