--- a/src/index.css
+++ b/src/index.css
@@ -133,7 +133,8 @@ html {
   position: relative;
   color: white;
   width: 100%;
-  height: 63vh;
+  height: auto;
+  min-height: 63vh;
   border-radius: 40px;
   overflow: hidden; 
   display: flex;
@@ -287,7 +288,7 @@ html {
 }
 
 .card-pale-text{
-  font-size: clamp(14px, 2vw, 18px);
+  font-size: clamp(14px, 5vw, 18px);
   /* font-size: clamp(6px, 2vw, 18px); */
   opacity: 20%;
   width: 100%;
@@ -370,7 +371,7 @@ html {
 }
 
 .card3-text{
-  font-size: clamp(23px, 3vw, 40px);
+  font-size: clamp(23px, 3.5vw, 40px);
   /* font-size: clamp(13px, 3vw, 40px); */
   line-height: 1.1;
   text-align: left;
@@ -396,7 +397,7 @@ html {
 
 .card4-text{
   font-family: 'Raleway';
-  font-size: clamp(20px, 3vw, 35px);
+  font-size: clamp(20px, 3.5vw, 35px);
   /* font-size: clamp(10px, 3vw, 35px); */
   font-weight: 500;
   line-height: 1.1;
@@ -1043,6 +1044,10 @@ background-color: #111;
 
 
 @media (max-width: 576px) {
+  .card-mob{
+    margin-left: 20px !important;
+  }
+
   .arrow-icon {
     width: 6vw; 
   }
@@ -1206,9 +1211,6 @@ background-color: #111;
     
   }
 
-  .card-mob{
-    margin-left: 20px !important;
-  }
 
   header {
     /* width: 100%;
