--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ body {
   align-items: center;
   max-width: 1400px; 
   position: relative;
+  padding: 20px 20px 0 20px!important; 
 }
 
 .for-mb{
@@ -1073,6 +1074,10 @@ background-color: #111;
   section {
     padding: 20px; 
     box-sizing: border-box; 
+  }
+
+  .header {
+    padding: 20px 20px 0 20px!important; 
   }
 
   .hero, .contact, .choose-title, .ice-title {
